--- a/GamesApp.Web/wwwroot/css/style.css
+++ b/GamesApp.Web/wwwroot/css/style.css
@@ -1,10 +1,46 @@
 ﻿body {
-    
+    background-color: #04050c;
 }
 
-main {
-    max-width: 600px;
+p {
+    color: #918fb5;
+}
+
+main > h2, h3 {
+    color: #fff;
+}
+
+body > main {
+    max-width: 1200px;
     margin: 0 auto;
+    padding: 4%;
+    background-color: #080a18;
+}
+
+header img {
+    max-width: 1200px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    opacity: 0.4;
+}
+
+header {
+    height: 400px;
+    max-width: 1200px;
+    margin: 0 auto;
+    position: relative;
+}
+
+header h1 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin: 0;
+    color: #fff;
+    font-size: 4rem;
 }
 
 .add-game-form {
