--- a/GamesApp.Web/Views/Games/ViewGame.cshtml
+++ b/GamesApp.Web/Views/Games/ViewGame.cshtml
@@ -20,21 +20,32 @@
 	</header>
 
 	<main>
-		<h2>Game Info</h2>
+		<div class="game-info-header">
+			<h2>Game Info</h2>
+			<a asp-controller="Games" asp-action="Index" class="back-link">◁ Back to Game List</a>
+		</div>
 
-		<h3>Developer</h3>
-		<p>@Model.Developer</p>
+		<div class="game-info-container">
+			<div>
+				<h3>Developer</h3>
+				<p>@Model.Developer</p>
+			</div>
 	
-		<h3>Genre</h3>
-		<p>@Model.Genre</p>
+			<div>
+				<h3>Genre</h3>
+				<p>@Model.Genre</p>
+			</div>
 
-		<h3>Release Year</h3>
-		<p>@Model.Year</p>
+			<div>
+				<h3>Release Year</h3>
+				<p>@Model.Year</p>
+			</div>
+		</div>
 
 		<h3>Description</h3>
 		<p>@Model.Description</p>
 
-		<a asp-controller="Games" asp-action="Index" class="btn">Back to Game List</a>
+		
 	</main>
 </body>
 </html>
