--- a/GamesApp.Web/wwwroot/css/style.css
+++ b/GamesApp.Web/wwwroot/css/style.css
@@ -6,15 +6,45 @@ p {
     color: #918fb5;
 }
 
-main > h2, h3 {
+a {
+    color: #4e91f3;
+    text-decoration: none;
+    font-size: 1.1rem;
+    font-weight: 500;
+}
+
+a:hover {
+    color: #2468cb;
+}
+
+main h2, h3 {
+    color: #fff;
+}
+
+.btn {
+    background-color: #2468cb;
+    color: #fff;
+    font-size: 1.5rem;
+    margin-top: 3rem;
+}
+
+.btn:hover {
+    background-color: #0a3a81;
     color: #fff;
 }
 
 body > main {
     max-width: 1200px;
     margin: 0 auto;
-    padding: 4%;
+    padding: 4% 4% 10%;
     background-color: #080a18;
+    box-shadow: 0px 0px 27px 0px rgb(0 0 0 / 24%);
+}
+
+.main-index {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 header img {
@@ -31,6 +61,7 @@ header {
     max-width: 1200px;
     margin: 0 auto;
     position: relative;
+    box-shadow: 0px 0px 27px 0px rgb(0 0 0 / 24%);
 }
 
 header h1 {
@@ -41,6 +72,62 @@ header h1 {
     margin: 0;
     color: #fff;
     font-size: 4rem;
+    text-align: center;
+    text-shadow: 0 0 12px rgb(4 4 12);
+}
+
+.game-cards-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    gap: 2rem;
+}
+
+.game-card {
+    display: block;
+    width: 30%;
+    background-color: #13122f;
+    border-radius: 16px;
+    box-shadow: 0px 0px 27px 0px rgb(0 0 0 / 24%);
+    transition: box-shadow 0.2s, background-color 0.2s;
+}
+
+.game-card:hover {
+    background-color: #18173b;
+}
+
+.game-card img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    object-position: center;
+    border-radius: 16px 16px 0 0;
+}
+
+.game-card h2 {
+    padding: 1rem;
+    text-align: center;
+    font-size: 1.4rem;
+}
+
+.game-info-header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 4px solid #2f2d57;
+    margin-bottom: 3rem;
+    padding-bottom: 1rem;
+}
+
+.game-info-header h2 {
+    text-transform: uppercase;
+}
+
+.game-info-container {
+    display: flex;
+    gap: 8rem;
+    margin-bottom: 2rem;
 }
 
 .add-game-form {
