--- a/GamesApp.Web/Views/Games/AddGame.cshtml
+++ b/GamesApp.Web/Views/Games/AddGame.cshtml
@@ -6,47 +6,62 @@
 <head>
 	<title>Game App - Add Game</title>
 
-	@* Bootstrap links *@
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Alexandria:wght@100..900&display=swap" rel="stylesheet">
 
-    @* Custom CSS *@
-    <link rel="stylesheet" href="@Url.Content("~/css/style.css")" />
+	@* Custom CSS *@
+	<link rel="stylesheet" href="@Url.Content("~/css/style.css")" />
 </head>
 <body>
+	<header>
+		<img src="/Images/index-header.jpg" />
+		<h1 class="page-heading">Add a New Game</h1>
+	</header>
 	<main>
-		<h1>Add a New Game</h1>
-        <form asp-controller="Games" asp-action="AddGame" class="add-game-form">
-            <label asp-for="Name"></label>
-            <input asp-for="Name" />
-            <span asp-validation-for="Name"></span>
+		<form asp-controller="Games" asp-action="AddGame" class="add-game-form">
+			<div class="add-game-fields-container">
+				<div class="add-game-field">
+					<label asp-for="Name"></label>
+					<input asp-for="Name" />
+					<span asp-validation-for="Name"></span>
+				</div>
+				<div class="add-game-field">
+					<label asp-for="Developer"></label>
+					<input asp-for="Developer" />
+					<span asp-validation-for="Developer"></span>
+				</div>
+			</div>
 
-            <label asp-for="Developer"></label>
-            <input asp-for="Developer" />
-            <span asp-validation-for="Developer"></span>
-            
-            <label asp-for="Genre"></label>
-            <input asp-for="Genre" />
-            <span asp-validation-for="Genre"></span>
+			<div class="add-game-fields-container">
+				<div class="add-game-field">
+					<label asp-for="Genre"></label>
+					<input asp-for="Genre" />
+					<span asp-validation-for="Genre"></span>
+				</div>
 
-            <label asp-for="Year"></label>
-            <input asp-for="Year" />
-            <span asp-validation-for="Year"></span>
+				<div class="add-game-field">
+					<label asp-for="Year"></label>
+					<input asp-for="Year" />
+					<span asp-validation-for="Year"></span>
+				</div>
 
-            <label asp-for="ImageUrl"></label>
-            <input asp-for="ImageUrl" />
-            @* <span asp-validation-for="ImageUrl"></span> *@
+				<div class="add-game-field">
+					<label asp-for="ImageUrl"></label>
+					<input asp-for="ImageUrl" placeholder="Ex: www.example.com/image.jpg" />
+				</div>
+			</div>
 
-            <label asp-for="Description"></label>
-            <input asp-for="Description" />
-            <span asp-validation-for="Description"></span>
+			<label asp-for="Description"></label>
+			<textarea asp-for="Description" rows="5" cols="40"></textarea>
+			<span asp-validation-for="Description"></span>
 
-            <input type="submit" style="width: 300px;" value="Add Game" />
-        </form>
+			<button type="submit" value="Add Game" class="btn">Add Game</button>
+		</form>
 
-        @* <div asp-validation-summary="All" class="form-validations-container"></div> *@
+		@* <div asp-validation-summary="All" class="form-validations-container"></div> *@
 
-        <a asp-controller="Games" asp-action="Index" class="btn">Back to Game List</a>
+		@* <a asp-controller="Games" asp-action="Index" class="btn">Back to Game List</a> *@
 	</main>
 </body>
 </html>
