--- a/GamesApp.Web/wwwroot/css/style.css
+++ b/GamesApp.Web/wwwroot/css/style.css
@@ -1,5 +1,6 @@
 ﻿body {
     background-color: #04050c;
+    font-family: "Alexandria", sans-serif;
 }
 
 p {
@@ -24,8 +25,13 @@ main h2, h3 {
 .btn {
     background-color: #2468cb;
     color: #fff;
-    font-size: 1.5rem;
+    font-size: 1.8rem;
     margin-top: 3rem;
+}
+
+button.btn {
+    width: 300px;
+    margin: 0 auto;
 }
 
 .btn:hover {
@@ -53,7 +59,7 @@ header img {
     height: 100%;
     object-fit: cover;
     object-position: center;
-    opacity: 0.4;
+    opacity: 0.6;
 }
 
 header {
@@ -79,7 +85,7 @@ header h1 {
 .game-cards-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: center;
     gap: 2rem;
 }
 
@@ -134,6 +140,34 @@ header h1 {
     display: flex;
     flex-direction: column;
     gap: 1rem;
+}
+
+.add-game-form label {
+    color: #4e91f3;
+    font-size: 1.2rem;
+    font-weight: 500;
+}
+
+.add-game-fields-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 3rem;
+}
+
+.add-game-field {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    width: 100%;
+}
+
+.add-game-form input, textarea {
+    background-color: #13122f;
+    border: 2px solid black;
+    border-radius: 8px;
+    padding: 1rem;
+    color: #fff;
 }
 
 .form-validations-container {
