--- a/GamesApp.Web/Views/Games/Index.cshtml
+++ b/GamesApp.Web/Views/Games/Index.cshtml
@@ -1,32 +1,21 @@
 ﻿@model GamesApp.Web.Models.Game[]
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Games App</title>
+@{
+    ViewBag.Title = "My Favorite Games";
+    ViewBag.ImageSrc = "/Images/index-header.jpg";
+    ViewBag.MainClass = "main-index";
+    Layout = "_Layout";
+}
 
-    @* Custom CSS *@
-    <link rel="stylesheet" href="@Url.Content("~/css/style.css")" />
-</head>
-<body>
-    <header>
-        <img src="/Images/index-header.jpg" />
-        <h1 class="page-heading">My Favorite Games</h1>
-    </header>
+<div class="game-cards-container">
+    @foreach (var game in Model)
+    {
+        <a asp-controller="Games" asp-action="ViewGame" asp-route-id="@game.Id" class="game-card">
+            <img src="@game.ImageUrl" alt="@game.Name" />
+            <h2>@game.Name</h2>
+        </a>
+    }
+</div>
 
-    <main class="main-index">
-        <div class="game-cards-container">
-            @foreach (var game in Model)
-            {
-                <a asp-controller="Games" asp-action="ViewGame" asp-route-id="@game.Id" class="game-card">
-                    <img src="@game.ImageUrl" alt="@game.Name" />
-                    <h2>@game.Name</h2>
-                </a>
-            }
-        </div>
-
-        <a asp-controller="Games" asp-action="AddGame" class="btn">Add a New Game</a>
-    </main>
-</body>
-</html>
+<a asp-controller="Games" asp-action="AddGame" class="btn">Add a New Game</a>
