--- a/GamesApp.Web/Views/Games/ViewGame.cshtml
+++ b/GamesApp.Web/Views/Games/ViewGame.cshtml
@@ -1,47 +1,34 @@
 ﻿@model GamesApp.Web.Models.Game
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Game App - View Game</title>
+@{
+	ViewBag.Title = @Model.Name;
+	ViewBag.ImageSrc = @Model.ImageUrl;
+	ViewBag.MainClass = "main-view";
+	Layout = "_Layout";
+}
 
-	@* Custom CSS *@
-	<link rel="stylesheet" href="@Url.Content("~/css/style.css")" />
-</head>
-<body>
-	<header>
-		<img src="@Model.ImageUrl" />
-		<h1 class="page-heading">@Model.Name</h1>
-	</header>
+<div class="game-info-header">
+	<h2>Game Info</h2>
+	<a asp-controller="Games" asp-action="Index" class="back-link">◁ Back to Game List</a>
+</div>
 
-	<main>
-		<div class="game-info-header">
-			<h2>Game Info</h2>
-			<a asp-controller="Games" asp-action="Index" class="back-link">◁ Back to Game List</a>
-		</div>
-
-		<div class="game-info-container">
-			<div>
-				<h3>Developer</h3>
-				<p>@Model.Developer</p>
-			</div>
+<div class="game-info-container">
+	<div>
+		<h3>Developer</h3>
+		<p>@Model.Developer</p>
+	</div>
 	
-			<div>
-				<h3>Genre</h3>
-				<p>@Model.Genre</p>
-			</div>
+	<div>
+		<h3>Genre</h3>
+		<p>@Model.Genre</p>
+	</div>
 
-			<div>
-				<h3>Release Year</h3>
-				<p>@Model.Year</p>
-			</div>
-		</div>
+	<div>
+		<h3>Release Year</h3>
+		<p>@Model.Year</p>
+	</div>
+</div>
 
-		<h3>Description</h3>
-		<p>@Model.Description</p>
-
-		
-	</main>
-</body>
-</html>
+<h3>Description</h3>
+<p>@Model.Description</p>
