--- a/GamesApp.Web/Views/Games/AddGame.cshtml
+++ b/GamesApp.Web/Views/Games/AddGame.cshtml
@@ -1,11 +1,9 @@
-﻿@model GamesApp.Web.Models.Game
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@model Game
 
 @{
 	ViewBag.Title = "Add a New Game";
 	ViewBag.ImageSrc = "/Images/index-header.jpg";
 	ViewBag.MainClass = "main-add";
-	Layout = "_Layout";
 }
 
 <form asp-controller="Games" asp-action="AddGame" class="add-game-form">
