--- a/GamesApp.Web/Views/Games/Index.cshtml
+++ b/GamesApp.Web/Views/Games/Index.cshtml
@@ -1,11 +1,9 @@
-﻿@model GamesApp.Web.Models.Game[]
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@model Game[]
 
 @{
     ViewBag.Title = "My Favorite Games";
     ViewBag.ImageSrc = "/Images/index-header.jpg";
     ViewBag.MainClass = "main-index";
-    Layout = "_Layout";
 }
 
 <div class="game-cards-container">
