--- a/GamesApp.Web/Views/Games/ViewGame.cshtml
+++ b/GamesApp.Web/Views/Games/ViewGame.cshtml
@@ -1,11 +1,9 @@
-﻿@model GamesApp.Web.Models.Game
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@model Game
 
 @{
 	ViewBag.Title = @Model.Name;
 	ViewBag.ImageSrc = @Model.ImageUrl;
 	ViewBag.MainClass = "main-view";
-	Layout = "_Layout";
 }
 
 <div class="game-info-header">
