--- a/GamesApp.Web/Views/Games/ViewGame.cshtml
+++ b/GamesApp.Web/Views/Games/ViewGame.cshtml
@@ -6,10 +6,7 @@
 	ViewBag.MainClass = "main-view";
 }
 
-<div class="game-info-header">
-	<h2>Game Info</h2>
-	<a asp-controller="Games" asp-action="Index" class="back-link">◁ Back to Game List</a>
-</div>
+<partial name="_GameInfoHeader" />
 
 <div class="game-info-container">
 	<div>
