--- a/GamesApp.Web/Views/Shared/_Layout.cshtml
+++ b/GamesApp.Web/Views/Shared/_Layout.cshtml
@@ -21,5 +21,8 @@
     <main class="@ViewBag.MainClass">
         @RenderBody()
     </main>
+
+    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.7.1.min.js"></script>
+    @RenderSection("scripts", false)
 </body>
 </html>
