--- a/GamesApp.Web/wwwroot/css/style.css
+++ b/GamesApp.Web/wwwroot/css/style.css
@@ -61,7 +61,7 @@ main {
     max-width: 1200px;
     margin: 0 auto;
     padding: 4% 4% 10%;
-    background-color: #080a18;
+    background-color: #0b0e21;
     box-shadow: 0px 0px 27px 0px rgb(0 0 0 / 24%);
 }
 
@@ -136,6 +136,7 @@ header h1 {
     padding: 1rem;
     text-align: center;
     font-size: 1.4rem;
+    margin-bottom: 0;
 }
 
 
@@ -167,11 +168,11 @@ header h1 {
 .add-game-form {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 2rem;
 }
 
 .add-game-form label {
-    color: #4e91f3;
+    color: #a2c8ff;
     font-size: 1.2rem;
     font-weight: 500;
 }
@@ -196,6 +197,13 @@ header h1 {
     border-radius: 8px;
     padding: 1rem;
     color: #fff;
+    font-family: "Alexandria", sans-serif;
+    font-size: 1.1rem;
+    font-weight: 300;
+}
+
+textarea {
+    resize: vertical;
 }
 
 .form-validations-container {
