--- a/GamesApp.Web/Views/_ViewImports.cshtml
+++ b/GamesApp.Web/Views/_ViewImports.cshtml
@@ -1,2 +1,3 @@
-﻿@using GamesApp.Web.Models;
+﻿@* @using GamesApp.Web.Models; *@
+@using GamesApp.Web.Views.Games;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
